# claude-usage-notch-server

./: .gitignore  README.md  backfill.py  deploy.sh  pyproject.toml  sync.sh
.github/workflows/: ci.yml
install/: install.sh  projects_claude-usage-notch-server.service  projects_claude-usage-notch-server_ping.service  projects_claude-usage-notch-server_ping.timer  projects_claude-usage-notch-server_scheduler.service
src/: analytics.py  app.py  backfill.py  config.py  database.py  git_tool.py  models.py  routes.py  scheduler.py
tests/: conftest.py  test_config.py  test_routes.py  test_scheduler.py
