[project]
name = "claude-usage-notch-server"
version = "0.1.0"
description = "Stores Claude Code usage records pushed from the notch app and serves them back for charting."
authors = [{name = "Mohit Nalavadi"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "flask>=3.0",
    "sqlalchemy>=2.0",
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
    "coverage>=7.13.5",
    "black>=26.3.1",
    "ruff>=0.15.7",
    "isort>=8.0.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black",
    "ruff>=0.14.10",
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
]

[tool.config]
flask_port = 5014
flask_host = "0.0.0.0"
db_path = "claude-usage.db"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
config = "src.config:main"
app = "src.app:main"
backfill = "backfill:main"

[tool.black]
line-length = 110
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.isort]
force_single_line = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-s -v --cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv]
exclude-newer = "2026-06-12T00:00:00Z"
